@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-24T16:07:06Z",
-  "count_outdated" : 354,
-  "uniques_outdated" : 70,
-  "count" : 383,
-  "uniques" : 80,
+  "timestamp" : "2022-05-25T00:32:32Z",
+  "count_outdated" : 356,
+  "uniques_outdated" : 72,
+  "count" : 384,
+  "uniques" : 81,
   "views" : [
-    {
-      "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-05-13T00:00:00Z",
       "count": 10,
