@@ -1,12 +1,7 @@
 {
-  "count": 29,
-  "uniques": 10,
+  "count": 28,
+  "uniques": 9,
   "views": [
-    {
-      "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-13T00:00:00Z",
       "count": 10,
